--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,31 +8,34 @@
 <div>
   <ul>
     <li>
-      <h4><a routerLink="reportFour">報表4</a></h4>
+      <h2><a routerLink="reportFour">報表4</a></h2>
     </li>
     <li>
-      <h4><a routerLink="reportFive">報表5</a></h4>
+      <h2><a routerLink="reportFive">報表5</a></h2>
     </li>
     <li>
-      <h4><a routerLink="reportSix">報表6</a></h4>
+      <h2><a routerLink="reportSix">報表6</a></h2>
     </li>
     <li>
-      <h4><a routerLink="reportSeven">報表7</a></h4>
+      <h2><a routerLink="reportSeven">報表7</a></h2>
     </li>
     <li>
-      <h4><a routerLink="reportEight">報表8</a></h4>
+      <h2><a routerLink="reportEight">報表8</a></h2>
     </li>
     <li>
-      <h4><a routerLink="reportNine">報表9</a></h4>
+      <h2><a routerLink="reportNine">報表9</a></h2>
     </li>
     <li>
-      <h4><a routerLink="reportTen">報表10</a></h4>
+      <h2><a routerLink="reportTen">報表10</a></h2>
     </li>
     <li>
-      <h4><a routerLink="reportEleven">報表11</a></h4>
+      <h2><a routerLink="reportEleven">報表11</a></h2>
+    </li>
+    <li>
+      <h2><a routerLink="reportTwelve">報表12</a></h2>
     </li>
   </ul>
 </div>
-<div style="size: A4;margin: 0 auto;width: 820px;">
+<div style="size: A4;margin: 0 auto;width: 820px;margin-bottom: 50px;">
   <router-outlet></router-outlet>
 </div>
