--- a/src/app/report-eight/report-eight.component.html
+++ b/src/app/report-eight/report-eight.component.html
@@ -1,101 +1,101 @@
-<h6 style="margin-bottom: 5px;">8.追債費用表(月報)</h6>
+<h2>8.追債費用表(月報)</h2>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;border-right: 0px;text-align: center;word-break: break-word;width: 15%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;border-right: 0px;text-align: center;word-break: break-word;width: 15%;">
         追債費用＝
-      </td>
-      <td
+      </th>
+      <th
         style="border: 1px solid black;border-right: 0px;border-left: 0px;text-align: center;word-break: break-word;width: 10%;">
 
-      </td>
-      <td
+      </th>
+      <th
         style="border: 1px solid black;border-right: 0px;border-left: 0px;text-align: center;word-break: break-word;width: 2%;">
         -
-      </td>
-      <td
+      </th>
+      <th
         style="border: 1px solid black;border-right: 0px;border-left: 0px;text-align: center;word-break: break-word;width: 10%;">
 
-      </td>
-      <td style="border: 1px solid black;border-left: 0px;text-align: center;word-break: break-word;width: 2%;">
+      </th>
+      <th style="border: 1px solid black;border-left: 0px;text-align: center;word-break: break-word;width: 2%;">
         =
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         金額
-      </td>
+      </th>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;border-right: 0px;text-align: center;word-break: break-word;width: 15%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;border-right: 0px;text-align: center;word-break: break-word;width: 15%;">
         自留追債費用＝
-      </td>
-      <td
+      </th>
+      <th
         style="border: 1px solid black;border-right: 0px;border-left: 0px;text-align: center;word-break: break-word;width: 10%;">
 
-      </td>
-      <td
+      </th>
+      <th
         style="border: 1px solid black;border-right: 0px;border-left: 0px;text-align: center;word-break: break-word;width: 2%;">
         -
-      </td>
-      <td
+      </th>
+      <th
         style="border: 1px solid black;border-right: 0px;border-left: 0px;text-align: center;word-break: break-word;width: 10%;">
 
-      </td>
-      <td style="border: 1px solid black;border-left: 0px;text-align: center;word-break: break-word;width: 2%;">
+      </th>
+      <th style="border: 1px solid black;border-left: 0px;text-align: center;word-break: break-word;width: 2%;">
         =
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         金額
-      </td>
+      </th>
     </tr>
-    <tr style="height: 2rem"></tr>
-    <tr style="height: 2rem">
-      <td colspan="4" style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
+    <tr style="height: 3rem"></tr>
+    <tr style="height: 3rem">
+      <th colspan="4" style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         日期
-      </td>
-      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 2%;">
+      </th>
+      <th style="border: 1px solid black;text-align: right;word-break: break-word;width: 2%;">
 
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         金額
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         金額
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         備註
-      </td>
+      </th>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         日期
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         金額
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 2%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 2%;">
 
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         減項
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 2%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 2%;">
 
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         金額
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         金額
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         備註
-      </td>
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
+      </th>
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 10%;">
         經辦單位
-      </td>
+      </th>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
         V
       </td>
@@ -124,7 +124,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
 
       </td>
