--- a/src/app/report-eleven/report-eleven.component.html
+++ b/src/app/report-eleven/report-eleven.component.html
@@ -1,14 +1,13 @@
-<h6 style="margin-bottom: 5px;">11.提存前損失率報表(月/季報)</h6>
-<div style="text-align: center;font-size: 10px;">
+<h2>11.提存前損失率報表(月/季報)</h2>
+<h3 style="text-align: center;">
   104年度輸出保險業務損失率(以未提存準備計算)
-</div>
-<div style="text-align: right;font-size: 10px;margin-bottom: 5px;">
+</h3>
+<h5 style="text-align: right;margin-bottom: 5px;">
   單位：％
-</div>
-<table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+</h5>
+<table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th rowspan="2" style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         104年度/月份
       </th>
@@ -19,7 +18,7 @@
         自留業務
       </th>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
         損失率
       </th>
@@ -33,7 +32,7 @@
         淨損失率
       </th>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -53,10 +52,39 @@
   </tbody>
 </table>
 <br />
-<table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+<p><span>註一：104年度截至12月份損失率及淨損失率計算如下</span><span style="float: right">(單位:新臺幣元)</span></p>
+<p>
+  （一）整體業務損失率＝賠款支出／保險費收入
+</p>
+<p style="margin-left: 10rem">
+  ＝78,887,860／305,508,535＝25.82%
+</p>
+<p>
+  （二）自留業務損失率＝自留賠款支出／自留保費收入
+</p>
+<p style="margin-left: 10rem">
+  ＝49,584,436／171,360,863＝28.94%
+</p>
+<p>
+  （三）整體業務淨損失率＝（賠款支出－收回款＋追債費用）／保費收入
+</p>
+<p style="margin-left: 10rem">
+  ＝(78,887,860－27,447,334＋68,366)／305,508,535＝16.86%
+</p>
+<p>
+  （四）自留業務淨損失率＝（自留賠款支出－自留收回款＋自留追債費用）／自留保費收入
+</p>
+<p style="margin-left: 10rem">
+  ＝（49,584,436－23,436,622＋34,183）／171,360,863=15.28%
+</p>
+<p>
+  註二：經查世界前三大輸出信用機構公布於官網最新之損失率情形，104年第三季Coface淨損失率為52.5%，Euler
+  Hermes淨損失率為57.3%，Atradius僅公布103年度損失率為50.4%，未公布104年第三季損失率。前述三大機構皆未公布104年度第四季數據。
+</p>
+<p>註三：承保單位別損失率(每季出現)</p>
+<table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
         106年度/季
       </th>
@@ -73,7 +101,7 @@
         損失率
       </th>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
         V
       </td>
@@ -90,22 +118,22 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-        <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
-          
-        </td>
-        <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
-          
-        </td>
-        <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 20%;">
-          V
-        </td>
-        <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 20%;">
-          V
-        </td>
-        <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
-          
-        </td>
-      </tr>
+    <tr style="height: 3rem">
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
+
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
+
+      </td>
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 20%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: right;word-break: break-word;width: 20%;">
+        V
+      </td>
+      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 20%;">
+
+      </td>
+    </tr>
   </tbody>
 </table>
