--- a/src/app/report-five/report-five.component.html
+++ b/src/app/report-five/report-five.component.html
@@ -1,14 +1,14 @@
-<h6 style="margin-bottom: 5px;">5.賠款明細表(月報)，賠款/收回明細資料。多次收回即顯示多筆</h6>
-<h6 style="text-align: center;margin-bottom: 5px;">
+<h2 >5.賠款明細表(月報)，賠款/收回明細資料。多次收回即顯示多筆</h2>
+<h3 style="text-align: center;">
   104年1-12月輸出保險賠款明細表
-</h6>
+</h3>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         被保險人
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -16,10 +16,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         案號
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -27,10 +27,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         保險單號碼/保險證明書號碼
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -38,10 +38,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         輸出貨價
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -49,10 +49,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         被保險人信用配額或開狀銀行信用配額<br />(美元/新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -60,10 +60,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         買主/開狀銀行
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -71,10 +71,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         買主國家/地區
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -82,10 +82,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         交易產品
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -93,10 +93,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         買主信用等級
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -104,10 +104,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         賠付日期
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -115,10 +115,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         賠付金額<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -126,10 +126,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         賠付原因
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -137,10 +137,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         簽單年度
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -148,10 +148,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         再保險攤賠比率(%)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -159,10 +159,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         再保險攤賠<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -170,10 +170,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         本行自留賠款<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -181,10 +181,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         適用582專案金額<br />(新臺幣元）
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -192,10 +192,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         適用加強輸出保險準備計劃<br />(新臺幣元）
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -203,10 +203,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         調整後本行自留賠款<br />(新臺幣元）
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -214,10 +214,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         經辦單位
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
