--- a/src/app/report-nine/report-nine.component.html
+++ b/src/app/report-nine/report-nine.component.html
@@ -1,9 +1,9 @@
-<h6 style="margin-bottom: 5px;">9.賠款分析表(月報)，提供依險別/單位別/國家別/交易產品別之統計資料</h6>
-<h6 style="text-align: center;margin-bottom: 5px;">104年1-12月本行輸出保險賠款分析表(險別)</h6>
+<h2>9.賠款分析表(月報)，提供依險別/單位別/國家別/交易產品別之統計資料</h2>
+<h3 style="text-align: center;">104年1-12月本行輸出保險賠款分析表(險別)</h3>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <thead>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         出口商
       </th>
@@ -25,7 +25,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -45,7 +45,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -62,7 +62,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -82,10 +82,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         合計
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 12%;">
 
       </td>
@@ -104,11 +104,11 @@
     </tr>
   </tbody>
 </table>
-<h6 style="text-align: center;margin-bottom: 5px;">104年1-12月本行輸出保險賠款分析表(單位別)</h6>
+<h3 style="text-align: center;">104年1-12月本行輸出保險賠款分析表(單位別)</h3>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <thead>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         出口商
       </th>
@@ -130,7 +130,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -150,7 +150,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -167,7 +167,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         V
       </td>
@@ -187,10 +187,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 25%;">
         合計
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 12%;">
 
       </td>
@@ -209,11 +209,11 @@
     </tr>
   </tbody>
 </table>
-<h6 style="text-align: center;margin-bottom: 5px;">104年1-12月本行輸出保險賠款分析表(單位別)</h6>
+<h3 style="text-align: center;">104年1-12月本行輸出保險賠款分析表(單位別)</h3>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <thead>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         出口商
       </th>
@@ -232,7 +232,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -249,7 +249,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -263,7 +263,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         V
       </td>
@@ -280,10 +280,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 30%;">
         合計
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 15%;">
 
       </td>
