--- a/src/app/report-seven/report-seven.component.html
+++ b/src/app/report-seven/report-seven.component.html
@@ -1,14 +1,14 @@
-<h6 style="margin-bottom: 5px;">7.理賠後收回明細表(月報)，賠付後收回之案件資料</h6>
-<h6 style="text-align: center;font-size: 10px;margin-bottom: 5px;">
+<h2>7.理賠後收回明細表(月報)，賠付後收回之案件資料</h2>
+<h3 style="text-align: center;">
   104年1-12月輸出保險理賠後收回款明細表
-</h6>
+</h3>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         被保險人
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -19,10 +19,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         險別
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -33,10 +33,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         輸出地區
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -47,10 +47,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         交易產品
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -61,10 +61,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         國外買主/開狀銀行
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -75,10 +75,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         被保險人信用配額或開狀銀行信用配額<br />(美元/新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -89,10 +89,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         賠付日期
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -103,10 +103,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         賠付金額<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -117,10 +117,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         賠付原因
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -131,10 +131,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         收回日期
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -145,10 +145,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         收回款<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -159,10 +159,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         本行分得收回款金額<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -173,10 +173,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         簽單年度
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -187,10 +187,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         再保險攤賠比率(%)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -201,10 +201,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         分配予再保險公司之金額<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -215,10 +215,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         自留理賠後收回款<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -229,10 +229,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         分配予582專案補助之金額<br />(新臺幣元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
@@ -243,10 +243,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         追索情形
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%">
         V
       </td>
