--- a/src/app/report-six/report-six.component.html
+++ b/src/app/report-six/report-six.component.html
@@ -1,14 +1,14 @@
-<h6 style="margin-bottom: 5px;">6.理賠前收回明細表(月報)，賠款/款項已全部收回之逾期案件資料</h6>
-<h6 style="text-align: center;font-size: 10px;margin-bottom: 5px;">
+<h2 >6.理賠前收回明細表(月報)，賠款/款項已全部收回之逾期案件資料</h2>
+<h3 style="text-align: center;">
   104年12月輸出保險理賠前收回明細表
-</h6>
+</h3>
 <table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+  style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         被保險人
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -19,10 +19,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         險別
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -33,10 +33,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         輸出貨價<br />（US$） 
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -47,10 +47,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         輸出貨價
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -61,10 +61,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         輸出地區
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -75,10 +75,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         輸出產品
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -89,10 +89,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         收回日期
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -103,10 +103,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         信用保險金額<br />(新臺幣千元)
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -117,10 +117,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         未付原因
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -131,10 +131,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         經辦單位
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
@@ -145,10 +145,10 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
-      <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
+    <tr style="height: 3rem">
+      <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 22%">
         處理人員
-      </td>
+      </th>
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 26%;">
         V
       </td>
