--- a/src/app/report-ten/report-ten.component.html
+++ b/src/app/report-ten/report-ten.component.html
@@ -1,16 +1,15 @@
-<h6 style="margin-bottom: 5px;">
+<h2>
   10.理賠後收回款分析表(月報)，提供理賠後收回款金額之彙統計表報表
-</h6>
-<div style="text-align: center;font-size: 10px;">
+</h2>
+<h3 style="text-align: center;">
   105年1-3月輸出保險自留理賠後收回款分析表
-</div>
-<div style="text-align: right;font-size: 10px;margin-bottom: 5px;">
+</h3>
+<h5 style="text-align: right;margin-bottom: 5px;">
   單位:新臺幣元
-</div>
-<table
-  style="border: 1px solid black;text-align: center;border-collapse: collapse;font-size: 9px;table-layout: fixed;width: 100%;">
+</h5>
+<table style="border: 1px solid black;text-align: center;border-collapse: collapse;table-layout: fixed;width: 100%;">
   <tbody>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         承保單位別
       </th>
@@ -21,7 +20,7 @@
         百分比
       </th>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -32,7 +31,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -43,7 +42,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
@@ -54,9 +53,9 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         險別
       </th>
@@ -67,7 +66,7 @@
         百分比
       </th>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -78,7 +77,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -89,7 +88,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
@@ -100,9 +99,9 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         承保國家別
       </th>
@@ -113,7 +112,7 @@
         百分比
       </th>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -124,7 +123,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -135,7 +134,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
@@ -146,9 +145,9 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         交易貨品別
       </th>
@@ -159,7 +158,7 @@
         百分比
       </th>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -170,7 +169,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <td style="border: 1px solid black;text-align: center;word-break: break-word;width: 35%;">
         V
       </td>
@@ -181,7 +180,7 @@
         V
       </td>
     </tr>
-    <tr style="height: 2rem">
+    <tr style="height: 3rem">
       <th style="border: 1px solid black;text-align: center;word-break: break-word;width: 40%;">
         合計
       </th>
